--- a/GenSys/Views/Shared/_Layout.cshtml
+++ b/GenSys/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("系统配置", "Index", "SystemConfig")</li>
-                    <li>@Html.ActionLink("设备管理", "Index", "EquipmentMana")</li>
+                    <li>@Html.ActionLink("设备管理", "Index", "DeviceMana")</li>
                     <li>@Html.ActionLink("联动配置", "Index", "LinkageConfig")</li>
                     <li>@Html.ActionLink("报表", "Index", "Report")</li>
                     <li>@Html.ActionLink("日志", "Index", "Log")</li>
