--- a/GenSys/Views/LinkageConfig/Index.cshtml
+++ b/GenSys/Views/LinkageConfig/Index.cshtml
@@ -1,7 +1,149 @@
 ﻿@{
     ViewBag.Title = "联动配置";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@section css {
+    <link href="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min2.css" rel="stylesheet" />
+    <style type="text/css">
+    </style>
+}
 
-<p>Use this area to provide additional information.</p>
+<div class="row">
+    <div class="col-md-12">
+        <h2>联动配置</h2>
+        <br />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-2">
+        <div class="form-group" >
+            <select class="site" style="min-width:190px;height:25px" >
+                <option>请选择站点...</option>
+                <option>磨溪</option>
+                <option>etc.</option>
+            </select>
+        </div>
+    </div>
+    <div class="col-md-2">
+        <label for="fileinp">
+            <input type="button" id="btn" value="导入用户" style="width:190px;height:25px">
+            <input type="file" name="UserFile" id="fileinp">
+        </label>
+    </div>
+    <div class="col-md-1">
+        <div>
+            <button id="upload" style="height:25px" >上传</button>
+        </div>
+    </div>
+</div>
+<br />
+
+
+<div class="row">
+    <div class="col-md-12">
+        <table id="table-javascript"></table>
+    </div>
+</div>
+
+
+@section Scripts {
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+    
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-en-US.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('#table-javascript').bootstrapTable({
+                method: 'get',
+                url: '/LinkageConfig/GetData',
+                cache: false,
+                striped: true,
+                pagination: true,
+                pageSize: 50,
+                pageList: [10, 25, 50, 100],
+                minimumCountColumns: 2,
+                clickToSelect: true,
+                columns: [{
+                    field: 'Num',
+                    title: '序号',
+                    align: 'center',
+                    valign: 'middle',
+                    sortable: true
+                }, {
+                    field: 'Site',
+                    title: '站点',
+                    align: 'center',
+                    valign: 'middle',
+                    sortable: true
+                }, {
+                    field: 'ServerIP',
+                    title: '服务器IP',
+                    align: 'center',
+                    valign: 'middle',
+                    sortable: true
+                }, {
+                    field: 'FileName',
+                    title: '规则文件名',
+                    align: 'center',
+                    valign: 'middle',
+                    sortable: true
+                }, {
+                    field: 'UpdateTime',
+                    title: '最后更新时间',
+                    align: 'center',
+                    valign: 'middle',
+                    sortable: true
+                }, {
+                    field: 'Remove',
+                    title: '删除',
+                    align: 'center',
+                    valign: 'middle',
+                    clickToSelect: false,
+                    formatter: RemoveFormatter,
+                    events: RemoveEvents
+                },{
+                    field: 'Apply',
+                    title: '应用',
+                    align: 'center',
+                    valign: 'middle',
+                    clickToSelect: false,
+                    formatter: ApplyFormatter,
+                    events: ApplyEvents
+                }]
+            });
+
+        });
+
+        function RemoveFormatter(value, row, index) {
+            return [
+                ' <a class="remove" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-remove-sign"></i>',
+                '</a>'
+            ].join('');
+        }
+
+        function ApplyFormatter(value, row, index) {
+            return [
+                '<a class="apply" href="javascript:void(0)" title="Apply">',
+                '<i class="glyphicon glyphicon-check"></i>',
+                '</a>'
+            ].join('');
+        }
+
+        window.RemoveEvents = {
+            'click .remove': function (e, value, row, index) {
+                alert('You click remove icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            }
+        };
+
+        window.ApplyEvents = {
+            'click .apply': function (e, value, row, index) {
+                alert('You click apply icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            }
+        };
+
+    </script>
+}
