--- a/GenSys/Views/DeviceMana/Index.cshtml
+++ b/GenSys/Views/DeviceMana/Index.cshtml
@@ -44,6 +44,103 @@
                 filter: false // 不过滤，否则选中后其它选项消失
             });
         });
+        $('#table-javascript').bootstrapTable({
+            method: 'get',
+            url: '/Home/GetData',
+            cache: false,
+            height: 400,
+            striped: true,
+            pagination: true,
+            pageSize: 50,
+            pageList: [10, 25, 50, 100, 200],
+            search: true,
+            showColumns: true,
+            showRefresh: true,
+            minimumCountColumns: 2,
+            clickToSelect: true,
+            columns: [{
+                field: 'Id',
+                title: '序号',
+                align: 'center',
+                valign: 'middle',
+                sortable: true
+            }, {
+                field: 'Site',
+                title: '站点',
+                align: 'center',
+                valign: 'middle',
+                sortable: true
+            }, {
+                field: 'Dev_Type',
+                title: '设备类型',
+                align: 'center',
+                valign: 'middle',
+                sortable: true
+            }, {
+                field: 'Dev_Model',
+                title: '设备型号',
+                align: 'center',
+                valign: 'middle',
+                sortable: true
+            }, {
+                field: 'Alias',
+                title: '别名',
+                align: 'center',
+                valign: 'middle',
+                sortable: true
+            }, {
+                field: 'Ip',
+                title: 'IP',
+                align: 'center',
+                valign: 'middle',
+                sortable: true
+            }, {
+                field: 'Alg_Config',
+                title: '算法配置',
+                align: 'center',
+                valign: 'middle',
+                clickToSelect: false,
+                formatter: operateFormatter,
+                events: operateEvents
+            }, {
+                field: 'Delete',
+                title: '删除',
+                align: 'center',
+                valign: 'middle',
+                clickToSelect: false,
+                formatter: operateFormatter,
+                events: operateEvents
+            }]
+        });
+        
+        function operateFormatter(value, row, index) {
+            return [
+                '<a class="like" href="javascript:void(0)" title="Like">',
+                '<i class="glyphicon glyphicon-heart"></i>',
+                '</a>',
+                ' <a class="edit ml10" href="javascript:void(0)" title="Edit">',
+                '<i class="glyphicon glyphicon-edit"></i>',
+                '</a>',
+                ' <a class="remove ml10" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-remove"></i>',
+                '</a>'
+            ].join('');
+        }
+
+        window.operateEvents = {
+            'click .like': function (e, value, row, index) {
+                alert('You click like icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            },
+            'click .edit': function (e, value, row, index) {
+                alert('You click edit icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            },
+            'click .remove': function (e, value, row, index) {
+                alert('You click remove icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            }
+        };
     </script>
 }
 
@@ -74,3 +171,7 @@
         </div>
         <button type="submit" class="btn btn-default">提交</button>
     </form>
+
+    <div class="row">
+        <table id="table-javascript"></table>
+    </div>
