--- a/GenSys/Views/DeviceMana/Index.cshtml
+++ b/GenSys/Views/DeviceMana/Index.cshtml
@@ -8,7 +8,7 @@
     <script src="~/Scripts/jquery.editable-select/jquery.editable-select.min.js" type="text/javascript"></script>
     <link href="~/Scripts/jquery.editable-select/jquery.editable-select.min.css" rel="stylesheet" type="text/css" />
     <script>
-        $.get("/Home/GetData", function (data, status) {
+        $.get("/DeviceMana/GetData", function (data, status) {
             var htm = "<option value='' selected='selected' disabled='disabled'>请选择/输入站点</option>"; 
             for (var int = 0; int < data.length; int++) {
                 htm += "<option value='" + data[int].name + "'>" + data[int].Name + "</option>";
@@ -20,7 +20,7 @@
                 filter: false // 不过滤，否则选中后其它选项消失
             });
         });
-        $.get("/Home/GetData", function (data, status) {
+        $.get("/DeviceMana/GetData", function (data, status) {
             var htm = "<option value='' selected='selected' disabled='disabled'>请选择设备类型</option>";
             for (var int = 0; int < data.length; int++) {
                 htm += "<option value='" + data[int].name + "'>" + data[int].Name + "</option>";
@@ -32,7 +32,7 @@
                 filter: false // 不过滤，否则选中后其它选项消失
             });
         });
-        $.get("/Home/GetData", function (data, status) {
+        $.get("/DeviceMana/GetData", function (data, status) {
             var htm = "<option value='' selected='selected' disabled='disabled'>请选择设备型号</option>";
             for (var int = 0; int < data.length; int++) {
                 htm += "<option value='" + data[int].name + "'>" + data[int].Name + "</option>";
@@ -46,7 +46,7 @@
         });
         $('#table-javascript').bootstrapTable({
             method: 'get',
-            url: '/Home/GetData',
+            url: '/DeviceMana/GetData',
             cache: false,
             height: 400,
             striped: true,
