--- a/GenSys/Views/dev_dict/Delete.cshtml
+++ b/GenSys/Views/dev_dict/Delete.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.model)
+            @Html.DisplayNameFor(model => model.settable)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.model)
+            @Html.DisplayFor(model => model.settable)
         </dd>
 
     </dl>
