--- a/GenSys/Views/DeviceMana/Index.cshtml
+++ b/GenSys/Views/DeviceMana/Index.cshtml
@@ -239,11 +239,38 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.id })
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("删除", "Delete", new { id = item.id })
+                @*@Html.ActionLink("删除", "Delete", new { id = item.id })*@
+                <!-- 按钮触发模态框 -->
+                <a data-toggle="modal" data-target="#myModal">删除</a>
+                <!-- 模态框（Modal） -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"
+                                        aria-hidden="true">
+                                    ×
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    删除设备
+                                </h4>
+                            </div>
+                            <div class="modal-body">
+                                @Html.DisplayFor(modelItem => item.site)
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default"
+                                        data-dismiss="modal">
+                                    关闭
+                                </button>
+                                <button type="button" class="btn btn-warning">
+                                    确认删除
+                                </button>
+                            </div>
+                        </div><!-- /.modal-content -->
+                    </div><!-- /.modal-dialog -->
+                </div><!-- /.modal -->
             </td>
         </tr>
     }
-
 </table>
