--- a/GenSys/Views/dev_dict/Create.cshtml
+++ b/GenSys/Views/dev_dict/Create.cshtml
@@ -32,10 +32,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.model, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.settable, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.model, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.model, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.settable, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.settable, "", new { @class = "text-danger" })
             </div>
         </div>
 
